[Fix] haciendo cambios en peticiones y controles de cors